[gd_scene load_steps=2 format=3 uid="uid://ddxkjmbo16jvj"]

[ext_resource type="Script" path="res://scenes/game/Main.gd" id="1_s0rk3"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_s0rk3")

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnContainer"]
position = Vector2(942, 88)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
